# feature-tools

./: .gitignore  README.md  extract_features.py  setup.sh  utils.py  visualize.py
d2net/: d2net_extract.py
d2net/lib/: dataset.py  loss.py  pyramid.py  utils.py
images/: H  ref.ppm  trg.ppm
lift/: lift_detect.py
lift/lib/: custom_types.py  filter_tools.py  lasagne_tools.py  sift_tools.py  solvers.py
lift/lib/c-code/: .gitignore
lift/lib/dataset_tools/: test.py
lift/lib/networks/: eccv_base.py  eccv_combined.py  network_base.py
lift/lib/networks/descriptor/: descriptor_imported.py
lift/lib/networks/orientation/: cvpr16.py
private/: README.md
sfop/: CMakeLists.txt  mysfop.py  pre_process.sh
sfop/include/: CLayer.h  CSfop.h
sfop/src/: CLayer.cpp  CMakeLists.txt  COctave.cpp  CSfop.cpp  main.cpp
superpoint/: demo_superpoint.py
